include/turbo/turbo.h

typedef struct turbo_context   turbo_context;   /* one device, its memory   */
typedef struct turbo_buffer    turbo_buffer;    /* memory on host or device */
typedef struct turbo_model     turbo_model;     /* a bundle loaded on a context */
/* ---- Small types ------------------------------------------------------- */

/* UTF-8 view. ptr may be NULL only when len is 0. Not NUL-terminated. */
typedef struct turbo_text {
    const char *ptr;
    uint64_t    len;
} turbo_text;
/* Caller-owned. On success code is 0 and message[0] is 0. */
typedef struct turbo_error {
    uint32_t struct_size;
    int32_t  code;
    uint32_t field;     /* 1-based field index for the two errors that name one, else 0 */
    char     message[TURBO_ERROR_MESSAGE_LEN];   /* NUL-terminated UTF-8 */
} turbo_error;
typedef struct turbo_native_handle {
    uint32_t struct_size;
    uint32_t kind;        /* TURBO_HANDLE_* */
    uint64_t handle;      /* pointer, cl_mem, fd or object as an integer */
    uint64_t aux;
    uint64_t offset;      /* bytes into the allocation */
} turbo_native_handle;
/* Packed row-major. */
typedef struct turbo_buffer_desc {
    uint32_t struct_size;
    uint32_t placement;   /* TURBO_PLACE_* */
    uint32_t dtype;       /* TURBO_DTYPE_* */
    uint32_t ndim;        /* 1 or 2 */
    uint64_t shape[2];
    uint64_t bytes;       /* 0 = from shape and dtype */
} turbo_buffer_desc;
int32_t turbo_buffer_get_desc(turbo_buffer *buf, turbo_buffer_desc *out, turbo_error *err);
/* A host pointer for HOST, PINNED and SHARED placements; TURBO_E_UNSUPPORTED for DEVICE. */
int32_t turbo_buffer_host_ptr(turbo_buffer *buf, void **out, turbo_error *err);
/* The device's own handle, for a caller that continues on the device. */
int32_t turbo_buffer_export(turbo_buffer *buf, uint32_t kind, turbo_native_handle *out, turbo_error *err);
/* ---- Model ------------------------------------------------------------- */

typedef struct turbo_model_info {
    uint32_t struct_size;
    uint32_t task;              /* TURBO_TASK_* */
    uint32_t dim;
    uint32_t pooling;           /* TURBO_POOLING_* as the bundle says */
    uint32_t normalize;         /* TURBO_NORMALIZE_* as the bundle says */
    uint32_t max_seq;           /* tokens */
    uint32_t max_batch;         /* rows a session may take */
    uint32_t dtype;             /* compute dtype in use */
    char     model_id[128];
    char     revision[64];
    char     artifact_sha256[72];    /* hex, of the artifact file this device loaded */
    char     tokenizer_sha256[72];   /* hex, of the tokenizer file */
    char     prefix_query[128];
    char     prefix_document[128];
} turbo_model_info;
/* Load a bundle directory on the context's device. Every file is checked
 * against the manifest's hash before use. */
int32_t turbo_model_load(turbo_context *ctx, turbo_text bundle_path, turbo_model **out, turbo_error *err);
void    turbo_model_release(turbo_model *m);
int32_t turbo_model_get_info(turbo_model *m, turbo_model_info *out, turbo_error *err);