bindings/java/src/main/java/ai/pipestream/turbo/ffi/TurboNative.java


        public static final MemorySegment ADDR = TurboNative.findOrThrow("turbo_buffer_get_desc");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int32_t turbo_buffer_get_desc(turbo_buffer *buf, turbo_buffer_desc *out, turbo_error *err)
     * }
     */
    public static FunctionDescriptor turbo_buffer_get_desc$descriptor() {
        return turbo_buffer_get_desc.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int32_t turbo_buffer_get_desc(turbo_buffer *buf, turbo_buffer_desc *out, turbo_error *err)
     * }
     */
    public static MethodHandle turbo_buffer_get_desc$handle() {
        return turbo_buffer_get_desc.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int32_t turbo_buffer_get_desc(turbo_buffer *buf, turbo_buffer_desc *out, turbo_error *err)
     * }
     */
    public static MemorySegment turbo_buffer_get_desc$address() {
        return turbo_buffer_get_desc.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int32_t turbo_buffer_get_desc(turbo_buffer *buf, turbo_buffer_desc *out, turbo_error *err)
     * }
     */
    public static int turbo_buffer_get_desc(MemorySegment buf, MemorySegment out, MemorySegment err) {
        var mh$ = turbo_buffer_get_desc.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("turbo_buffer_get_desc", buf, out, err);
            }
            return (int)mh$.invokeExact(buf, out, err);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class turbo_buffer_host_ptr {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            TurboNative.C_INT,
            TurboNative.C_POINTER,
            TurboNative.C_POINTER,
            TurboNative.C_POINTER
        );

        public static final MemorySegment ADDR = TurboNative.findOrThrow("turbo_buffer_host_ptr");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int32_t turbo_buffer_host_ptr(turbo_buffer *buf, void **out, turbo_error *err)
     * }
     */
    public static FunctionDescriptor turbo_buffer_host_ptr$descriptor() {
        return turbo_buffer_host_ptr.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int32_t turbo_buffer_host_ptr(turbo_buffer *buf, void **out, turbo_error *err)
     * }
     */
    public static MethodHandle turbo_buffer_host_ptr$handle() {
        return turbo_buffer_host_ptr.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int32_t turbo_buffer_host_ptr(turbo_buffer *buf, void **out, turbo_error *err)
     * }
     */
    public static MemorySegment turbo_buffer_host_ptr$address() {
        return turbo_buffer_host_ptr.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int32_t turbo_buffer_host_ptr(turbo_buffer *buf, void **out, turbo_error *err)
     * }
     */
    public static int turbo_buffer_host_ptr(MemorySegment buf, MemorySegment out, MemorySegment err) {
        var mh$ = turbo_buffer_host_ptr.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("turbo_buffer_host_ptr", buf, out, err);
            }
            return (int)mh$.invokeExact(buf, out, err);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class turbo_buffer_export {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            TurboNative.C_INT,
            TurboNative.C_POINTER,
            TurboNative.C_INT,
            TurboNative.C_POINTER,
            TurboNative.C_POINTER
        );

        public static final MemorySegment ADDR = TurboNative.findOrThrow("turbo_buffer_export");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int32_t turbo_buffer_export(turbo_buffer *buf, uint32_t kind, turbo_native_handle *out, turbo_error *err)
     * }
     */
    public static FunctionDescriptor turbo_buffer_export$descriptor() {
        return turbo_buffer_export.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int32_t turbo_buffer_export(turbo_buffer *buf, uint32_t kind, turbo_native_handle *out, turbo_error *err)
     * }
     */
    public static MethodHandle turbo_buffer_export$handle() {
        return turbo_buffer_export.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int32_t turbo_buffer_export(turbo_buffer *buf, uint32_t kind, turbo_native_handle *out, turbo_error *err)
     * }
     */
    public static MemorySegment turbo_buffer_export$address() {
        return turbo_buffer_export.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int32_t turbo_buffer_export(turbo_buffer *buf, uint32_t kind, turbo_native_handle *out, turbo_error *err)
     * }
     */
    public static int turbo_buffer_export(MemorySegment buf, int kind, MemorySegment out, MemorySegment err) {
        var mh$ = turbo_buffer_export.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("turbo_buffer_export", buf, kind, out, err);
            }
            return (int)mh$.invokeExact(buf, kind, out, err);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class turbo_model_load {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            TurboNative.C_INT,
            TurboNative.C_POINTER,
            turbo_text.layout(),
            TurboNative.C_POINTER,
            TurboNative.C_POINTER,
            TurboNative.C_POINTER
        );

        public static final MemorySegment ADDR = TurboNative.findOrThrow("turbo_model_load");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int32_t turbo_model_load(turbo_context *ctx, turbo_text bundle_path, const turbo_model_desc *desc, turbo_model **out, turbo_error *err)
     * }
     */
    public static FunctionDescriptor turbo_model_load$descriptor() {
        return turbo_model_load.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int32_t turbo_model_load(turbo_context *ctx, turbo_text bundle_path, const turbo_model_desc *desc, turbo_model **out, turbo_error *err)
     * }
     */
    public static MethodHandle turbo_model_load$handle() {
        return turbo_model_load.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int32_t turbo_model_load(turbo_context *ctx, turbo_text bundle_path, const turbo_model_desc *desc, turbo_model **out, turbo_error *err)
     * }
     */
    public static MemorySegment turbo_model_load$address() {
        return turbo_model_load.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int32_t turbo_model_load(turbo_context *ctx, turbo_text bundle_path, const turbo_model_desc *desc, turbo_model **out, turbo_error *err)
     * }
     */
    public static int turbo_model_load(MemorySegment ctx, MemorySegment bundle_path, MemorySegment desc, MemorySegment out, MemorySegment err) {
        var mh$ = turbo_model_load.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("turbo_model_load", ctx, bundle_path, desc, out, err);
            }
            return (int)mh$.invokeExact(ctx, bundle_path, desc, out, err);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class turbo_model_release {
        public static final FunctionDescriptor DESC = FunctionDescriptor.ofVoid(
            TurboNative.C_POINTER
        );

        public static final MemorySegment ADDR = TurboNative.findOrThrow("turbo_model_release");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * void turbo_model_release(turbo_model *m)
     * }
     */
    public static FunctionDescriptor turbo_model_release$descriptor() {
        return turbo_model_release.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * void turbo_model_release(turbo_model *m)
     * }
     */
    public static MethodHandle turbo_model_release$handle() {
        return turbo_model_release.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * void turbo_model_release(turbo_model *m)
     * }
     */
    public static MemorySegment turbo_model_release$address() {
        return turbo_model_release.ADDR;
    }

    /**
     * {@snippet lang=c :
     * void turbo_model_release(turbo_model *m)
     * }
     */
    public static void turbo_model_release(MemorySegment m) {
        var mh$ = turbo_model_release.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("turbo_model_release", m);
            }
            mh$.invokeExact(m);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class turbo_model_get_info {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            TurboNative.C_INT,
            TurboNative.C_POINTER,
            TurboNative.C_POINTER,
            TurboNative.C_POINTER
        );

        public static final MemorySegment ADDR = TurboNative.findOrThrow("turbo_model_get_info");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int32_t turbo_model_get_info(turbo_model *m, turbo_model_info *out, turbo_error *err)
     * }
     */
    public static FunctionDescriptor turbo_model_get_info$descriptor() {
        return turbo_model_get_info.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int32_t turbo_model_get_info(turbo_model *m, turbo_model_info *out, turbo_error *err)
     * }
     */
    public static MethodHandle turbo_model_get_info$handle() {
        return turbo_model_get_info.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int32_t turbo_model_get_info(turbo_model *m, turbo_model_info *out, turbo_error *err)
     * }
     */
    public static MemorySegment turbo_model_get_info$address() {
        return turbo_model_get_info.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int32_t turbo_model_get_info(turbo_model *m, turbo_model_info *out, turbo_error *err)
     * }
     */
    public static int turbo_model_get_info(MemorySegment m, MemorySegment out, MemorySegment err) {
        var mh$ = turbo_model_get_info.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("turbo_model_get_info", m, out, err);
            }
            return (int)mh$.invokeExact(m, out, err);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class turbo_model_io_info {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            TurboNative.C_INT,
            TurboNative.C_POINTER,
            TurboNative.C_INT,
            TurboNative.C_INT,
            TurboNative.C_POINTER,
            TurboNative.C_POINTER
        );

        public static final MemorySegment ADDR = TurboNative.findOrThrow("turbo_model_io_info");
